src/objects/ActivityIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Dev_Name__c</fullName>
        <label>Developer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Display label of field</description>
        <label>Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>should be either Task or Event</description>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RecId__c</fullName>
        <description>Id number of record in object (Tasks, Events)</description>
        <label>RecId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ActivityIds</label>
</CustomObject>